# DeviceConnect-Android

./: .gitignore  README.md  readme.en.md  readme.ja.md
dConnectDevicePlugin/dConnectDeviceAWSIot/: README.md  build.gradle  settings.gradle
dConnectManager/dConnectLibStreaming/libstreaming/: CMakeLists.txt  build.gradle
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/net/majorkernelpanic/streaming/: MediaStream.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/net/majorkernelpanic/streaming/mp4/: MP4Parser.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/net/majorkernelpanic/streaming/rtp/: MJPEGPacketizer.java  RtpSocket.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/net/majorkernelpanic/streaming/rtsp/: RtspRequest.java  RtspServer.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/net/majorkernelpanic/streaming/video/: SurfaceVideoStream.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/org/deviceconnect/android/streaming/mjpeg/: MixedReplaceMediaServer.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/java/org/deviceconnect/android/streaming/rtp/: RtpSocket.java
dConnectManager/dConnectLibStreaming/libstreaming/src/main/jni/: common.h
dConnectSDK/dConnectLibStreaming/libsrt/: .gitignore  CMakeLists.txt  README.md  build.gradle
dConnectSDK/dConnectLibStreaming/libsrt/src/androidTest/java/org/deviceconnect/android/libsrt/: ExampleInstrumentedTest.java  SRTServerSocketTest.java  SRTSocketTest.java
dConnectSDK/dConnectLibStreaming/libsrt/src/androidTest/java/org/deviceconnect/android/libsrt/utils/: EchoSRTServer.java  TestSRTServer.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/: AndroidManifest.xml
dConnectSDK/dConnectLibStreaming/libsrt/src/main/cpp/: srt-native-interface.cpp
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/: EventListenerManager.java  EventListenerWrapper.java  NdkHelper.java  SRT.java  SRTClientSocket.java  SRTClientSocketException.java  SRTServer.java  SRTServerSocket.java  SRTSocket.java  SRTSocketException.java  SRTStats.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/broadcast/: SRTClient.java  SRTMuxer.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/client/: Frame.java  FrameCache.java  SRTClient.java  SRTPlayer.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/client/decoder/: Decoder.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/player/: Frame.java  FrameCache.java  SRTPlayer.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/player/decoder/: Decoder.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/server/: EventListenerManager.java  EventListenerWrapper.java  MediaStream.java  Mpeg2TsMuxer.java  SRTMuxer.java  SRTServer.java  SRTSession.java  SRTSocketThread.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/server/audio/: AudioStream.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/java/org/deviceconnect/android/libsrt/util/: Mpeg2TsMuxer.java  SRTSocketThread.java
dConnectSDK/dConnectLibStreaming/libsrt/src/main/res/values/: strings.xml
dConnectSDK/dConnectLibStreaming/libsrt/src/test/java/org/deviceconnect/android/libsrt/: ExampleUnitTest.java
dConnectSDK/dConnectLibStreaming/libsrt/srt-build/ubuntu/: Vagrantfile
(+5358 files in other folders)
